# nhclientai

./: .flake8  .gitignore  CONTRIBUTION.md  README.md  pyproject.toml  requirements.txt
graphics/: nhclientai.ai
nhclientai/: __main__.py  doujinshi.py  handlers.py  imaging.py  interface.py  nhclientai.py
