[tool.poetry]
name = "nhclientai"
version = "0.1.0"
description = "The nhentai CLI client, for the terminal-dwelling degenerates."
authors = ["hysrx <github@rxyth.co>"]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: POSIX :: Linux',
    'Development Status :: 1 - Planning',
    'Natural Language :: English',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
]

[tool.poetry.dependencies]
python = "^3.7"
hentai = "==2.0"
Pillow = "==7.2.0"
colorama = "==0.4.3"
screeninfo = "==0.6.5"
toml = "==0.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
# pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
